--- a/app/src/main/res/layout/activity_relativelayout.xml
+++ b/app/src/main/res/layout/activity_relativelayout.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Relativelayout">
+    tools:context=".RelativeLayout">
 
     <View
         android:layout_centerVertical="true"
